fix:(left layout shift due to radix comp): used custom component for select. it was shifting whole layout left.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,7 +130,7 @@
 }
 
 html {
-  scrollbar-gutter: stable;
+  overflow-y: scroll !important;
 }
 
 body {
